Add multi-resolver functionality with flexible querying strategies
- Introduced `DnsMultiResolver` to support querying multiple DNS endpoints using strategies: FirstSuccess, FastestWins, SequentialAll, and RoundRobin.
- Implemented `MultiResolverOptions` to configure behavior such as max parallelism, endpoint timeouts, and response caching.
- Added `IDnsMultiResolver` interface for multi-resolver operations.
- Enhanced `DnsResponse` to include TTL metrics and transport information.
- Created `DnsResolverEndpoint` to encapsulate endpoint details and behaviors.
- Added `EndpointParser` for parsing user-provided resolver endpoint strings.
- Updated README with usage examples and detailed explanations of new features.
- Added tests for max concurrency hints in array-based resolution helpers.

--- a/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
+++ b/DnsClientX.PowerShell/DnsClientX.PowerShell.csproj
@@ -3,11 +3,13 @@
         <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`Windows`))' ">
             netstandard2.0;net472;net8.0
         </TargetFrameworks>
-        <TargetFrameworks Condition=" '$([MSBuild]::IsOsPlatform(`OSX`))'  Or '$([MSBuild]::IsOsPlatform(`Linux`))' ">
+        <TargetFrameworks
+            Condition=" '$([MSBuild]::IsOsPlatform(`OSX`))'  Or '$([MSBuild]::IsOsPlatform(`Linux`))' ">
             net8.0
         </TargetFrameworks>
         <Title>DnsClientX PowerShell Module</Title>
-        <Description>PowerShell module for DnsClientX DNS library. Provides cmdlets for DNS queries, service discovery, zone transfers, and DNS updates.</Description>
+        <Description>PowerShell module for DnsClientX DNS library. Provides cmdlets for DNS queries,
+            service discovery, zone transfers, and DNS updates.</Description>
         <AssemblyName>DnsClientX.PowerShell</AssemblyName>
         <AssemblyTitle>DnsClientX PowerShell Module</AssemblyTitle>
         <VersionPrefix>1.0.1</VersionPrefix>
@@ -32,6 +34,19 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
+
+    <!-- We need to remove PowerShell conflicting libraries as it will break output -->
+    <Target Name="RemoveFilesAfterBuild" AfterTargets="Build">
+        <Delete Files="$(OutDir)System.Management.Automation.dll" />
+        <Delete Files="$(OutDir)System.Management.dll" />
+    </Target>
+
+    <!-- Copy help documentation to publish output after publish -->
+    <Target Name="CopyHelpDocumentationToPublishOutput" AfterTargets="Publish">
+        <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll-Help.xml"
+            DestinationFiles="$(PublishDir)$(AssemblyName).dll-Help.xml"
+            Condition="Exists('$(OutputPath)$(AssemblyName).dll-Help.xml')" />
+    </Target>
 
     <ItemGroup>
         <PackageReference Include="PowerShellStandard.Library" Version="5.1.1" PrivateAssets="all" />
