--- a/DnsClientX.Tests/DnsClientX.Tests.csproj
+++ b/DnsClientX.Tests/DnsClientX.Tests.csproj
@@ -40,6 +40,10 @@
         </PackageReference>
         <PackageReference Include="System.Net.Http" Version="4.3.4"
             Condition="'$(TargetFramework)' == 'net472'" />
+        <PackageReference Include="System.Text.Json" Version="8.0.5"
+            Condition="'$(TargetFramework)' == 'net472'" />
+        <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0"
+            Condition="'$(TargetFramework)' == 'net472'" />
     </ItemGroup>
 
     <ItemGroup>
